--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<ruleset name="WP-CLI-server">
-	<description>Custom ruleset for WP-CLI server-command</description>
+<ruleset name="FP-CLI-server">
+	<description>Custom ruleset for FP-CLI server-command</description>
 
 	<!--
 	#############################################################################
@@ -24,11 +24,11 @@
 
 	<!--
 	#############################################################################
-	USE THE WP_CLI_CS RULESET
+	USE THE FP_CLI_CS RULESET
 	#############################################################################
 	-->
 
-	<rule ref="WP_CLI_CS"/>
+	<rule ref="FP_CLI_CS"/>
 
 	<!--
 	#############################################################################
@@ -41,18 +41,18 @@
 	<config name="testVersion" value="7.2-"/>
 
 	<!-- Verify that everything in the global namespace is either namespaced or prefixed.
-		 See: https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki/Customizable-sniff-properties#naming-conventions-prefix-everything-in-the-global-namespace -->
-	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
+		 See: https://github.com/FinPress-Coding-Standards/FinPress-Coding-Standards/wiki/Customizable-sniff-properties#naming-conventions-prefix-everything-in-the-global-namespace -->
+	<rule ref="FinPress.NamingConventions.PrefixAllGlobals">
 		<properties>
 			<property name="prefixes" type="array">
-				<element value="WP_CLI\Router"/><!-- Namespaces. -->
-				<element value="wpcli_server"/><!-- Global variables and such. -->
+				<element value="FP_CLI\Router"/><!-- Namespaces. -->
+				<element value="fpcli_server"/><!-- Global variables and such. -->
 			</property>
 		</properties>
 	</rule>
 
 	<!-- Exclude existing classes from the prefix rule as it would break BC to prefix them now. -->
-	<rule ref="WordPress.NamingConventions.PrefixAllGlobals.NonPrefixedClassFound">
+	<rule ref="FinPress.NamingConventions.PrefixAllGlobals.NonPrefixedClassFound">
 		<exclude-pattern>*/src/Server_Command\.php$</exclude-pattern>
 	</rule>
 </ruleset>
